test/Fail/Issue7741.err
Issue7741.agda:11.5-10: error: [UnequalTypes]
The type
  (section : List ⊤) → List ⊤
is not a subtype of
  List ⊤
when checking that the expression λ section → tt ∷ section has type
List ⊤
